* fixed extra-large gap between header and center

--- a/styles/everything.css
+++ b/styles/everything.css
@@ -13,7 +13,7 @@ body
 
 body > div
 {
-	margin-bottom: 2em;
+	margin-bottom: 1em;
 	width: 100%;
 }
 
